--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="flex flex-wrap items-center justify-between mb-4 gap-2">
       <div>
         <h1 id="titulo" class="text-2xl font-semibold text-green-600">Cardápio da Cantina</h1>
-        <p class="text-sm text-slate-500">Cadastro de lanches (manhã/tarde) persistente no Supabase. Exporta PNG responsivo.</p>
+        <p class="text-sm text-slate-500">Cadastro de lanches (manhã/tarde) - Colégio Imperatriz. Exporta PNG responsivo.</p>
       </div>
       <div class="space-x-2">
         <button onclick="changeMonth(-1)" class="btn">◀</button>
