--- a/index.html
+++ b/index.html
@@ -10,239 +10,245 @@
 </head>
 <body class="bg-slate-100 p-4">
 
-  <div class="max-w-6xl mx-auto">
-    <header class="flex flex-wrap items-center justify-between mb-4 gap-2">
-      <div>
-        <h1 id="titulo" class="text-2xl font-semibold text-green-600">Cardápio da Cantina</h1>
-        <p class="text-sm text-slate-500">Cadastro de lanches (manhã/tarde) - Colégio Imperatriz. Exporta PNG responsivo.</p>
-      </div>
-      <div class="space-x-2">
-        <button onclick="changeMonth(-1)" class="btn">◀</button>
-        <button onclick="goToday()" class="btn">Hoje</button>
-        <button onclick="changeMonth(1)" class="btn">▶</button>
-        <button id="exportBtn" onclick="generateImage()" class="btn-primary">Exportar PNG</button>
-      </div>
-    </header>
+<div class="max-w-6xl mx-auto">
+  <header class="flex flex-wrap items-center justify-between mb-4 gap-2">
+    <div>
+      <h1 id="titulo" class="text-2xl font-semibold text-green-600">Cardápio da Cantina</h1>
+      <p class="text-sm text-slate-500">Cadastro de lanches (manhã/tarde) - Colégio Imperatriz. Exporta PNG responsivo. (V1.0)</p>
+    </div>
+    <div class="space-x-2">
+      <button onclick="changeMonth(-1)" class="btn">◀</button>
+      <button onclick="goToday()" class="btn">Hoje</button>
+      <button onclick="changeMonth(1)" class="btn">▶</button>
+      <button id="exportBtn" onclick="generateImage()" class="btn-primary">Exportar PNG</button>
+    </div>
+  </header>
 
-    <div id="calendar" class="p-4 bg-white rounded-2xl shadow-md">
-      <div class="grid grid-cols-6 gap-2 text-center mb-2 font-medium">
-        <div>Seg</div><div>Ter</div><div>Qua</div><div>Qui</div><div>Sex</div><div>Sáb</div>
+  <div id="calendar" class="p-4 bg-white rounded-2xl shadow-md">
+    <div class="grid grid-cols-6 gap-2 text-center mb-2 font-medium">
+      <div>Seg</div><div>Ter</div><div>Qua</div><div>Qui</div><div>Sex</div><div>Sáb</div>
+    </div>
+    <div id="calendar-grid" class="grid grid-cols-6 gap-2"></div>
+    <footer class="mt-4 text-xs text-slate-500">
+      Clique num dia para adicionar/editar o cardápio da cantina.
+    </footer>
+  </div>
+</div>
+
+<!-- Modal -->
+<div id="modal" class="hidden fixed inset-0 z-50 flex items-center justify-center bg-black/40">
+  <div class="bg-white rounded-lg p-4 w-full max-w-md max-h-[90vh] overflow-y-auto">
+    <h3 id="modal-title" class="font-semibold mb-2">Editar Cantina</h3>
+    <div class="space-y-2">
+      <label class="block text-sm">Manhã</label>
+      <textarea id="modal-manha" class="w-full p-2 border rounded h-20"></textarea>
+      <label class="block text-sm">Tarde</label>
+      <textarea id="modal-tarde" class="w-full p-2 border rounded h-20"></textarea>
+      <div class="flex justify-end gap-2 pt-2">
+        <button onclick="closeModal()" class="btn">Cancelar</button>
+        <button onclick="saveFromModal()" class="btn-primary">Salvar</button>
       </div>
-      <div id="calendar-grid" class="grid grid-cols-6 gap-2"></div>
-      <footer class="mt-4 text-xs text-slate-500">
-        Clique num dia para adicionar/editar o cardápio da cantina.
-      </footer>
     </div>
   </div>
+</div>
 
-  <!-- Modal -->
-  <div id="modal" class="hidden fixed inset-0 z-50 flex items-center justify-center bg-black/40">
-    <div class="bg-white rounded-lg p-4 w-full max-w-md max-h-[90vh] overflow-y-auto">
-      <h3 id="modal-title" class="font-semibold mb-2">Editar Cantina</h3>
-      <div class="space-y-2">
-        <label class="block text-sm">Manhã</label>
-        <textarea id="modal-manha" class="w-full p-2 border rounded h-20"></textarea>
-        <label class="block text-sm">Tarde</label>
-        <textarea id="modal-tarde" class="w-full p-2 border rounded h-20"></textarea>
-        <div class="flex justify-end gap-2 pt-2">
-          <button onclick="closeModal()" class="btn">Cancelar</button>
-          <button onclick="saveFromModal()" class="btn-primary">Salvar</button>
-        </div>
-      </div>
-    </div>
-  </div>
+<style>
+  .btn { padding: 0.5rem 0.75rem; border-radius: .5rem; border: 1px solid #e2e8f0; background: white }
+  .btn-primary { padding: 0.5rem 0.75rem; border-radius: .5rem; background: #16a34a; color: white; border: none }
+</style>
 
-  <style>
-    .btn { padding: 0.5rem 0.75rem; border-radius: .5rem; border: 1px solid #e2e8f0; background: white }
-    .btn-primary { padding: 0.5rem 0.75rem; border-radius: .5rem; background: #16a34a; color: white; border: none }
-  </style>
+<script>
+// ====== CONFIGURAÇÃO SUPABASE ======
+const SUPABASE_URL = "https://dfyhbeppubrmxhoyqjrl.supabase.co";
+const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRmeWhiZXBwdWJybXhob3lxanJsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTg4MzAzOTYsImV4cCI6MjA3NDQwNjM5Nn0.A4NUvSXbxFw-CR0fhSrQo2mJn3C9vI_sgsdWBiuh6Z8";
+const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-  <script>
-  // ====== CONFIGURAÇÃO SUPABASE ======
-  const SUPABASE_URL = "https://dfyhbeppubrmxhoyqjrl.supabase.co";
-  const SUPABASE_KEY = "SUA_CHAVE_ANON_AQUI"; // substitua pela sua chave anon do Supabase
-  const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+// ====== elementos ======
+const calendarGrid = document.getElementById("calendar-grid");
+const titulo = document.getElementById("titulo");
+const modal = document.getElementById("modal");
+const modalManha = document.getElementById("modal-manha");
+const modalTarde = document.getElementById("modal-tarde");
+const modalTitle = document.getElementById("modal-title");
+const exportBtn = document.getElementById('exportBtn');
 
-  const calendarGrid = document.getElementById("calendar-grid");
-  const titulo = document.getElementById("titulo");
-  const modal = document.getElementById("modal");
-  const modalManha = document.getElementById("modal-manha");
-  const modalTarde = document.getElementById("modal-tarde");
-  const modalTitle = document.getElementById("modal-title");
-  const exportBtn = document.getElementById('exportBtn');
+let viewDate = new Date();
+viewDate = new Date(viewDate.getFullYear(), viewDate.getMonth(), 1);
+let menuData = {};
+let modalDate = null;
 
-  let viewDate = new Date();
-  viewDate = new Date(viewDate.getFullYear(), viewDate.getMonth(), 1);
-  let menuData = {};
-  let modalDate = null;
+function formatISO(y,m,d){ return `${y}-${String(m+1).padStart(2,"0")}-${String(d).padStart(2,"0")}`; }
 
-  function formatISO(y,m,d){ return `${y}-${String(m+1).padStart(2,"0")}-${String(d).padStart(2,"0")}`; }
-
-  // ====== carregar dados ======
-  async function loadData(){
+// ====== carregar dados ======
+async function loadData(){
+  try {
     const { data, error } = await supabaseClient
       .from("cardapio_cantina")
       .select("data_iso, manha, tarde")
       .order("data_iso", { ascending: true });
-    if (error) { console.error(error); return; }
+    if (error) { console.error("Erro ao carregar:", error); return; }
     menuData = {};
     data.forEach(row => {
       const iso = (typeof row.data_iso === 'string') ? row.data_iso : new Date(row.data_iso).toISOString().slice(0,10);
       menuData[iso] = { manha: row.manha, tarde: row.tarde };
     });
     renderCalendar();
+  } catch(err){
+    console.error("Erro inesperado ao carregar dados:", err);
   }
+}
 
-  // ====== render do calendário ======
-  function renderCalendar(){
-    const year = viewDate.getFullYear();
-    const month = viewDate.getMonth();
-    titulo.textContent = `Cardápio da Cantina — ${viewDate.toLocaleString('pt-BR',{month:'long'})} ${year}`;
-    calendarGrid.innerHTML = "";
-
-    const daysInMonth = new Date(year, month+1, 0).getDate();
-    let weekRow = [];
-    for (let d=1; d<=daysInMonth; d++){
-      const dateObj = new Date(year, month, d);
-      const weekday = dateObj.getDay();
-      if (weekday >= 1 && weekday <= 6) { // Segunda a Sábado
-        weekRow.push(d);
-        if (weekday === 6 || d === daysInMonth) {
-          renderWeek(weekRow, year, month);
-          weekRow = [];
-        }
+// ====== render calendário ======
+function renderCalendar(){
+  const year = viewDate.getFullYear();
+  const month = viewDate.getMonth();
+  titulo.textContent = `Cardápio da Cantina — ${viewDate.toLocaleString('pt-BR',{month:'long'})} ${year}`;
+  calendarGrid.innerHTML = "";
+  const daysInMonth = new Date(year, month+1, 0).getDate();
+  let weekRow = [];
+  for (let d=1; d<=daysInMonth; d++){
+    const dateObj = new Date(year, month, d);
+    const weekday = dateObj.getDay();
+    if (weekday >= 1 && weekday <= 6){
+      weekRow.push(d);
+      if (weekday === 6 || d === daysInMonth){
+        renderWeek(weekRow, year, month);
+        weekRow = [];
       }
     }
   }
+}
 
-  function renderWeek(days, year, month){
-    for (let i=1; i<=6; i++){
-      const cell = document.createElement("div");
-      cell.className = "min-h-[120px] p-2 border rounded-md flex flex-col justify-between hover:shadow-lg break-words text-sm bg-white";
-      const dayObj = days.find(d => new Date(year, month, d).getDay() === i);
-      if (!dayObj) { cell.className = "min-h-[120px] bg-slate-50 rounded-md"; calendarGrid.appendChild(cell); continue; }
-      const iso = formatISO(year, month, dayObj);
-      const entry = menuData[iso] || {};
-
-      let contentHtml = "";
-      if(entry.manha) contentHtml += `<div><span class="font-semibold">Manhã:</span> ${escapeHtml(entry.manha)}</div>`;
-      if(entry.tarde) contentHtml += `<div><span class="font-semibold">Tarde:</span> ${escapeHtml(entry.tarde)}</div>`;
-      if(!contentHtml) contentHtml = `<div class="text-slate-400">Clique para editar</div>`;
-
-      cell.innerHTML = `
-        <div class="flex justify-between items-start">
-          <div class="text-sm font-semibold">${dayObj}</div>
-          <div class="text-xs text-slate-400">${new Date(year,month,dayObj).toLocaleDateString()}</div>
-        </div>
-        <div class="text-left whitespace-pre-wrap break-words">${contentHtml}</div>
-        <div class="text-right">
-          <button onclick="openModalForDay('${iso}')" class="text-xs underline">Editar</button>
-        </div>
-      `;
-      cell.addEventListener("click", (e) => {
-        if (e.target.tagName.toLowerCase() === 'button') return;
-        openModalForDay(iso);
-      });
-      calendarGrid.appendChild(cell);
-    }
-  }
-
-  function escapeHtml(str){ if(!str) return ''; return String(str).replaceAll('&','&amp;').replaceAll('<','&lt;').replaceAll('>','&gt;'); }
-
-  // ====== modal ======
-  function openModalForDay(iso){
-    modalDate = iso;
+function renderWeek(days, year, month){
+  for (let i=1; i<=6; i++){
+    const cell = document.createElement("div");
+    cell.className = "min-h-[120px] p-2 border rounded-md flex flex-col justify-between hover:shadow-lg break-words text-sm bg-white";
+    const dayObj = days.find(d => new Date(year, month, d).getDay() === i);
+    if (!dayObj) { cell.className = "min-h-[120px] bg-slate-50 rounded-md"; calendarGrid.appendChild(cell); continue; }
+    const iso = formatISO(year, month, dayObj);
     const entry = menuData[iso] || {};
-    modalManha.value = entry.manha || "";
-    modalTarde.value = entry.tarde || "";
-    modalTitle.textContent = "Editar Cantina — " + iso;
-    modal.classList.remove("hidden");
-    modalManha.focus();
+    let contentHtml = "";
+    if(entry.manha) contentHtml += `<div><span class="font-semibold">Manhã:</span> ${escapeHtml(entry.manha)}</div>`;
+    if(entry.tarde) contentHtml += `<div><span class="font-semibold">Tarde:</span> ${escapeHtml(entry.tarde)}</div>`;
+    if(!contentHtml) contentHtml = `<div class="text-slate-400">Clique para editar</div>`;
+    cell.innerHTML = `
+      <div class="flex justify-between items-start">
+        <div class="text-sm font-semibold">${dayObj}</div>
+        <div class="text-xs text-slate-400">${new Date(year,month,dayObj).toLocaleDateString()}</div>
+      </div>
+      <div class="text-left whitespace-pre-wrap break-words">${contentHtml}</div>
+      <div class="text-right">
+        <button onclick="openModalForDay('${iso}')" class="text-xs underline">Editar</button>
+      </div>
+    `;
+    cell.addEventListener("click", e=>{
+      if(e.target.tagName.toLowerCase()==='button') return;
+      openModalForDay(iso);
+    });
+    calendarGrid.appendChild(cell);
   }
+}
 
-  function closeModal(){ modal.classList.add("hidden"); }
+function escapeHtml(str){ if(!str) return ''; return String(str).replaceAll('&','&amp;').replaceAll('<','&lt;').replaceAll('>','&gt;'); }
 
-  // ====== salvar ======
-  async function saveFromModal(){
-    if (!modalDate) return;
-    const newEntry = {
-      manha: modalManha.value.trim(),
-      tarde: modalTarde.value.trim()
-    };
-    const allEmpty = Object.values(newEntry).every(v => !v);
+// ====== modal ======
+function openModalForDay(iso){
+  modalDate = iso;
+  const entry = menuData[iso] || {};
+  modalManha.value = entry.manha || "";
+  modalTarde.value = entry.tarde || "";
+  modalTitle.textContent = "Editar Cantina — " + iso;
+  modal.classList.remove("hidden");
+  modalManha.focus();
+}
 
-    try {
-      if (allEmpty) {
-        await supabaseClient.from("cardapio_cantina").delete().eq("data_iso", modalDate);
-        delete menuData[modalDate];
-      } else {
-        await supabaseClient.from("cardapio_cantina").upsert({ data_iso: modalDate, ...newEntry }, { onConflict: 'data_iso' });
-        menuData[modalDate] = newEntry;
-      }
-    } catch (err) {
-      console.error("Erro ao salvar:", err);
-      alert("Erro ao salvar no banco.");
+function closeModal(){ modal.classList.add("hidden"); }
+
+// ====== salvar no Supabase ======
+async function saveFromModal(){
+  if(!modalDate) return;
+  const newEntry = {
+    manha: modalManha.value.trim(),
+    tarde: modalTarde.value.trim()
+  };
+  const allEmpty = Object.values(newEntry).every(v => !v);
+  const isoDate = new Date(modalDate).toISOString().slice(0,10); // garante YYYY-MM-DD
+  try {
+    let res;
+    if(allEmpty){
+      res = await supabaseClient.from("cardapio_cantina").delete().eq("data_iso", isoDate);
+      if(res.error) console.error("Erro delete:", res.error);
+      delete menuData[isoDate];
+    } else {
+      res = await supabaseClient.from("cardapio_cantina")
+        .upsert({ data_iso: isoDate, ...newEntry }, { onConflict: 'data_iso' });
+      if(res.error) console.error("Erro upsert:", res.error);
+      else menuData[isoDate] = newEntry;
     }
-    closeModal();
-    renderCalendar();
+  } catch(err){
+    console.error("Erro inesperado:", err);
+    alert("Erro ao salvar no banco");
   }
+  closeModal();
+  renderCalendar();
+}
 
-  function changeMonth(delta){ viewDate = new Date(viewDate.getFullYear(), viewDate.getMonth()+delta, 1); renderCalendar(); }
-  function goToday(){ const d = new Date(); viewDate = new Date(d.getFullYear(), d.getMonth(), 1); renderCalendar(); }
+// ====== navegação ======
+function changeMonth(delta){ viewDate = new Date(viewDate.getFullYear(), viewDate.getMonth()+delta, 1); renderCalendar(); }
+function goToday(){ const d=new Date(); viewDate=new Date(d.getFullYear(),d.getMonth(),1); renderCalendar(); }
 
-  // ====== export PNG ======
-  async function generateImage(){
-    if (exportBtn.disabled) return;
-    exportBtn.disabled = true;
-    const originalText = exportBtn.textContent;
-    exportBtn.textContent = 'Gerando...';
+// ====== export PNG ======
+async function generateImage(){
+  if(exportBtn.disabled) return;
+  exportBtn.disabled=true;
+  const originalText = exportBtn.textContent;
+  exportBtn.textContent='Gerando...';
 
-    try {
-      const calendar = document.getElementById("calendar");
-      const rect = calendar.getBoundingClientRect();
+  try {
+    const calendar=document.getElementById("calendar");
+    const clone=calendar.cloneNode(true);
+    clone.querySelectorAll("button").forEach(el=>el.remove());
+    clone.querySelectorAll(".text-right").forEach(el=>el.remove());
 
-      const clone = calendar.cloneNode(true);
-      clone.querySelectorAll("button").forEach(el => el.remove());
-      clone.querySelectorAll(".text-right").forEach(el => el.remove());
+    const wrapper=document.createElement('div');
+    wrapper.style.position='absolute';
+    wrapper.style.left='-9999px';
+    wrapper.style.background='white';
+    wrapper.style.padding='40px';
+    wrapper.style.border='4px solid #16a34a';
+    wrapper.style.borderRadius='20px';
 
-      const wrapper = document.createElement('div');
-      wrapper.style.position = 'absolute';
-      wrapper.style.left = '-9999px';
-      wrapper.style.background = 'white';
-      wrapper.style.padding = '40px';
-      wrapper.style.border = '4px solid #16a34a';
-      wrapper.style.borderRadius = '20px';
+    const title=document.createElement("h2");
+    const monthName=viewDate.toLocaleString("pt-BR",{month:"long"});
+    const year=viewDate.getFullYear();
+    title.textContent=`Cardápio da Cantina — ${monthName}/${year}`;
+    title.style.color="#16a34a";
+    title.style.fontSize="24px";
+    title.style.fontWeight="700";
+    title.style.marginBottom="20px";
 
-      const title = document.createElement("h2");
-      const monthName = viewDate.toLocaleString("pt-BR", { month: "long" });
-      const year = viewDate.getFullYear();
-      title.textContent = `Cardápio da Cantina — ${monthName}/${year}`;
-      title.style.color = "#16a34a";
-      title.style.fontSize = "24px";
-      title.style.fontWeight = "700";
-      title.style.marginBottom = "20px";
+    wrapper.appendChild(title);
+    wrapper.appendChild(clone);
+    document.body.appendChild(wrapper);
 
-      wrapper.appendChild(title);
-      wrapper.appendChild(clone);
-      document.body.appendChild(wrapper);
-
-      const canvas = await html2canvas(wrapper, { scale: 2, backgroundColor: "#ffffff" });
-      const dataURL = canvas.toDataURL("image/png");
-      const a = document.createElement("a");
-      a.href = dataURL;
-      a.download = `cantina-${year}-${String(viewDate.getMonth()+1).padStart(2,"0")}.png`;
-      document.body.appendChild(a);
-      a.click();
-      a.remove();
-
-      wrapper.remove();
-    } finally {
-      exportBtn.disabled = false;
-      exportBtn.textContent = originalText;
-    }
+    const canvas = await html2canvas(wrapper, { scale: 2, backgroundColor: "#ffffff" });
+    const dataURL = canvas.toDataURL("image/png");
+    const a=document.createElement("a");
+    a.href=dataURL;
+    a.download=`cantina-${year}-${String(viewDate.getMonth()+1).padStart(2,"0")}.png`;
+    document.body.appendChild(a);
+    a.click();
+    a.remove();
+    wrapper.remove();
+  } finally {
+    exportBtn.disabled=false;
+    exportBtn.textContent=originalText;
   }
+}
 
-  loadData();
-  </script>
+// ====== inicializa ======
+loadData();
+</script>
+
 </body>
 </html>
