--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@
 <style>
   .btn { padding: 0.5rem 0.75rem; border-radius: .5rem; border: 1px solid #e2e8f0; background: white }
   .btn-primary { padding: 0.5rem 0.75rem; border-radius: .5rem; background: #16a34a; color: white; border: none }
+  /* ===== Aumentar fonte dos textos do calendário ===== */
+  #calendar-grid .text-left {
+    font-size: 1rem;        /* padrão ~16px */
+    line-height: 1.4;
+  }
+
+  /* Tornar o nome das seções (ex: "Manhã:", "Tarde:") mais visível */
+  #calendar-grid .font-semibold {
+    font-size: 1.05rem;
+  }
 </style>
 
 <script>
