--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
   <script src="https://unpkg.com/@supabase/supabase-js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body class="bg-slate-100 p-4">
 
@@ -14,13 +15,14 @@
   <header class="flex flex-wrap items-center justify-between mb-4 gap-2">
     <div>
       <h1 id="titulo" class="text-2xl font-semibold text-green-600">Cardápio da Cantina</h1>
-      <p class="text-sm text-slate-500">Cadastro de lanches (manhã/tarde) - Colégio Imperatriz. Exporta PNG responsivo. (v 2.1)</p>
+      <p class="text-sm text-slate-500">Cadastro de lanches (manhã/tarde) - Colégio Imperatriz. Exporta PNG responsivo. (v 2.5)</p>
     </div>
     <div class="space-x-2">
       <button onclick="changeMonth(-1)" class="btn">◀</button>
       <button onclick="goToday()" class="btn">Hoje</button>
       <button onclick="changeMonth(1)" class="btn">▶</button>
-      <button id="exportBtn" onclick="generateImage()" class="btn-primary">Exportar PNG</button>
+	  <button id="exportBtn" onclick="generateImage()" class="btn-primary">Exportar PNG</button>
+	  <button id="exportPdfBtn" onclick="generatePDF()" class="btn-primary bg-red-600">Exportar PDF</button>
     </div>
   </header>
 
@@ -291,9 +293,111 @@ async function generateImage(){
   }
 }
 
+async function generatePDF() {
+  const pdfBtn = document.getElementById("exportPdfBtn");
+  if (pdfBtn.disabled) return;
+  pdfBtn.disabled = true;
+  const originalText = pdfBtn.textContent;
+  pdfBtn.textContent = "Gerando...";
+
+  try {
+    const calendar = document.getElementById("calendar");
+
+    // clonar e preparar layout, igual ao PNG
+    const clone = calendar.cloneNode(true);
+    clone.querySelectorAll("button").forEach(el => el.remove());
+    clone.querySelectorAll(".text-right").forEach(el => el.remove());
+    clone.querySelectorAll(".hover\\:shadow-lg").forEach(n => n.classList.remove("hover:shadow-lg"));
+
+    const wrapper = document.createElement('div');
+    wrapper.style.position = 'absolute';
+    wrapper.style.left = '-9999px';
+    wrapper.style.top = '0';
+    wrapper.style.padding = '40px';
+    wrapper.style.background = 'white';
+    wrapper.style.border = '4px solid #16a34a';
+    wrapper.style.borderRadius = '20px';
+    wrapper.style.overflow = 'visible';
+    wrapper.style.fontFamily = "Arial, sans-serif";
+
+    // Cabeçalho igual ao PNG
+    const headerRow = document.createElement("div");
+    headerRow.style.display = "flex";
+    headerRow.style.alignItems = "center";
+    headerRow.style.justifyContent = "flex-start";
+    headerRow.style.gap = "20px";
+    headerRow.style.marginBottom = "25px";
+
+    const logo = document.createElement("img");
+    logo.src = "https://i.ibb.co/KxSrH0Nj/logo.png";
+    logo.alt = "Logo";
+    logo.crossOrigin = "anonymous";
+    logo.style.maxHeight = "70px";
+    logo.style.width = "auto";
+    logo.style.display = "block";
+
+    await new Promise(resolve => { logo.onload = resolve; logo.onerror = resolve; });
+
+    headerRow.appendChild(logo);
+
+    const titleBlock = document.createElement("div");
+    titleBlock.style.flex = "1";
+
+    const title = document.createElement("h2");
+    const monthName = viewDate.toLocaleString("pt-BR",{month:"long"});
+    const year = viewDate.getFullYear();
+    title.textContent = `Cardápio da Cantina — ${monthName.charAt(0).toUpperCase()+monthName.slice(1)}/${year}`;
+    title.style.color = "#16a34a";
+    title.style.fontSize = "24px";
+    title.style.fontWeight = "700";
+    title.style.marginBottom = "6px";
+
+    const iconsRow = document.createElement("div");
+    iconsRow.innerHTML = "🍽️ 🥗 🍖 🍊 🍮";
+    iconsRow.style.fontSize = "22px";
+
+    titleBlock.appendChild(title);
+    titleBlock.appendChild(iconsRow);
+    headerRow.appendChild(titleBlock);
+
+    wrapper.appendChild(headerRow);
+    wrapper.appendChild(clone);
+    document.body.appendChild(wrapper);
+
+    const canvas = await html2canvas(wrapper, {
+      scale: 2,
+      backgroundColor: "#ffffff",
+      useCORS: true
+    });
+
+    const imgData = canvas.toDataURL("image/png");
+
+    // === Geração PDF ===
+    const pdf = new window.jspdf.jsPDF("landscape", "mm", "a4");
+    const pageWidth = pdf.internal.pageSize.getWidth();
+    const pageHeight = pdf.internal.pageSize.getHeight();
+
+    const ratio = Math.min(pageWidth / canvas.width, pageHeight / canvas.height);
+    const imgWidth = canvas.width * ratio;
+    const imgHeight = canvas.height * ratio;
+
+    const x = (pageWidth - imgWidth) / 2;
+    const y = (pageHeight - imgHeight) / 2;
+
+    pdf.addImage(imgData, "PNG", x, y, imgWidth, imgHeight);
+    pdf.save(`cantina-${year}-${String(viewDate.getMonth()+1).padStart(2,"0")}.pdf`);
+
+    wrapper.remove();
+  } catch (err) {
+    console.error("[exportPDF] erro ao gerar PDF:", err);
+    alert("Erro ao gerar PDF. Veja o console para detalhes.");
+  } finally {
+    pdfBtn.disabled = false;
+    pdfBtn.textContent = originalText;
+  }
+}
 // ====== inicializa ======
 loadData();
 </script>
-
 </body>
 </html>
