--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="flex flex-wrap items-center justify-between mb-4 gap-2">
     <div>
       <h1 id="titulo" class="text-2xl font-semibold text-green-600">Cardápio da Cantina</h1>
-      <p class="text-sm text-slate-500">Cadastro de lanches (manhã/tarde) - Colégio Imperatriz. Exporta PNG e PDF responsivo. (v 2.7)</p>
+      <p class="text-sm text-slate-500">Cadastro de lanches (manhã/tarde) - Colégio Imperatriz. Exporta PNG e PDF responsivo.</p>
     </div>
     <div class="space-x-2">
       <button onclick="changeMonth(-1)" class="btn">◀</button>
@@ -31,67 +31,35 @@
       <div>Seg</div><div>Ter</div><div>Qua</div><div>Qui</div><div>Sex</div><div>Sáb</div>
     </div>
     <div id="calendar-grid" class="grid grid-cols-6 gap-2"></div>
-    <footer class="mt-4 text-xs text-slate-500">
-      Clique num dia para adicionar/editar o cardápio da cantina.
-    </footer>
-  </div>
-</div>
-
-<!-- Modal -->
-<div id="modal" class="hidden fixed inset-0 z-50 flex items-center justify-center bg-black/40">
-  <div class="bg-white rounded-lg p-4 w-full max-w-md max-h-[90vh] overflow-y-auto">
-    <h3 id="modal-title" class="font-semibold mb-2">Editar Cantina</h3>
-    <div class="space-y-2">
-      <label class="block text-sm">Manhã</label>
-      <textarea id="modal-manha" class="w-full p-2 border rounded h-20"></textarea>
-      <label class="block text-sm">Tarde</label>
-      <textarea id="modal-tarde" class="w-full p-2 border rounded h-20"></textarea>
-      <div class="flex justify-end gap-2 pt-2">
-        <button onclick="closeModal()" class="btn">Cancelar</button>
-        <button onclick="saveFromModal()" class="btn-primary">Salvar</button>
-      </div>
-    </div>
   </div>
 </div>
 
 <style>
   .btn { padding: 0.5rem 0.75rem; border-radius: .5rem; border: 1px solid #e2e8f0; background: white }
   .btn-primary { padding: 0.5rem 0.75rem; border-radius: .5rem; background: #16a34a; color: white; border: none }
-  #calendar-grid .text-left { font-size: 1.2rem; line-height: 1.4; }
-  #calendar-grid .font-semibold { font-size: 1.05rem; }
 </style>
 
 <script>
-// ====== CONFIGURAÇÃO SUPABASE ======
 const SUPABASE_URL = "https://lfhgyyhzvhmdphgbvblc.supabase.co";
 const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxmaGd5eWh6dmhtZHBoZ2J2YmxjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTk5MzEzOTYsImV4cCI6MjA3NTUwNzM5Nn0.ZAcoIbeOQFIo01qW_rcKIkJKvneqgeN6rpPSCFvTe1Y";
 const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-// ====== ELEMENTOS ======
 const calendarGrid = document.getElementById("calendar-grid");
 const titulo = document.getElementById("titulo");
-const modal = document.getElementById("modal");
-const modalManha = document.getElementById("modal-manha");
-const modalTarde = document.getElementById("modal-tarde");
-const modalTitle = document.getElementById("modal-title");
 
 let viewDate = new Date();
 viewDate = new Date(viewDate.getFullYear(), viewDate.getMonth(), 1);
 let menuData = {};
-let modalDate = null;
 
-// ====== FUNÇÕES ======
 function formatISO(y, m, d) {
   return `${y}-${String(m + 1).padStart(2, "0")}-${String(d).padStart(2, "0")}`;
 }
 
-// ====== CARREGAR DADOS ======
 async function loadData() {
   try {
     const { data, error } = await supabaseClient
       .from("cardapio_cantina")
-      .select("data_iso, manha, tarde")
-      .order("data_iso", { ascending: true });
+      .select("data_iso, manha, tarde");
     if (error) throw error;
     menuData = {};
     data.forEach(row => {
@@ -106,104 +74,24 @@ async function loadData() {
   }
 }
 
-// ====== RENDER CALENDÁRIO ======
 function renderCalendar() {
   const year = viewDate.getFullYear();
   const month = viewDate.getMonth();
   titulo.textContent = `Cardápio da Cantina — ${viewDate.toLocaleString("pt-BR", { month: "long" })} ${year}`;
   calendarGrid.innerHTML = "";
   const daysInMonth = new Date(year, month + 1, 0).getDate();
-  let weekRow = [];
   for (let d = 1; d <= daysInMonth; d++) {
-    const dateObj = new Date(year, month, d);
-    const weekday = dateObj.getDay();
-    if (weekday >= 1 && weekday <= 6) {
-      weekRow.push(d);
-      if (weekday === 6 || d === daysInMonth) {
-        renderWeek(weekRow, year, month);
-        weekRow = [];
-      }
-    }
-  }
-}
-
-function renderWeek(days, year, month) {
-  for (let i = 1; i <= 6; i++) {
-    const cell = document.createElement("div");
-    cell.className = "min-h-[120px] p-2 border rounded-md flex flex-col justify-between hover:shadow-lg break-words text-sm bg-white";
-    const dayObj = days.find(d => new Date(year, month, d).getDay() === i);
-    if (!dayObj) {
-      cell.className = "min-h-[120px] bg-slate-50 rounded-md";
-      calendarGrid.appendChild(cell);
-      continue;
-    }
-    const iso = formatISO(year, month, dayObj);
+    const iso = formatISO(year, month, d);
     const entry = menuData[iso] || {};
-    let contentHtml = "";
-    if (entry.manha) contentHtml += `<div><span class="font-semibold">Manhã:</span> ${escapeHtml(entry.manha)}</div>`;
-    if (entry.tarde) contentHtml += `<div><span class="font-semibold">Tarde:</span> ${escapeHtml(entry.tarde)}</div>`;
-    if (!contentHtml) contentHtml = `<div class="text-slate-400">Clique para editar</div>`;
-    cell.innerHTML = `
-      <div class="flex justify-between items-start">
-        <div class="text-sm font-semibold">${dayObj}</div>
-        <div class="text-xs text-slate-400">${new Date(year, month, dayObj).toLocaleDateString()}</div>
-      </div>
-      <div class="text-left whitespace-pre-wrap break-words">${contentHtml}</div>
-      <div class="text-right">
-        <button onclick="openModalForDay('${iso}')" class="text-xs underline">Editar</button>
-      </div>`;
-    cell.addEventListener("click", e => {
-      if (e.target.tagName.toLowerCase() === "button") return;
-      openModalForDay(iso);
-    });
-    calendarGrid.appendChild(cell);
+    const div = document.createElement("div");
+    div.className = "p-2 border rounded bg-white min-h-[100px] text-sm";
+    div.innerHTML = `<div class="font-semibold">${d}</div>
+      <div class="mt-1">${entry.manha ? `<b>Manhã:</b> ${entry.manha}` : "<span class='text-slate-400'>Clique para editar</span>"}</div>
+      ${entry.tarde ? `<div><b>Tarde:</b> ${entry.tarde}</div>` : ""}`;
+    calendarGrid.appendChild(div);
   }
 }
 
-function escapeHtml(str) {
-  return str ? String(str).replaceAll("&", "&amp;").replaceAll("<", "&lt;").replaceAll(">", "&gt;") : "";
-}
-
-// ====== MODAL ======
-function openModalForDay(iso) {
-  modalDate = iso;
-  const entry = menuData[iso] || {};
-  modalManha.value = entry.manha || "";
-  modalTarde.value = entry.tarde || "";
-  modalTitle.textContent = "Editar Cantina — " + iso;
-  modal.classList.remove("hidden");
-  modalManha.focus();
-}
-function closeModal() { modal.classList.add("hidden"); }
-
-// ====== SALVAR ======
-async function saveFromModal() {
-  if (!modalDate) return;
-  const newEntry = {
-    manha: modalManha.value.trim(),
-    tarde: modalTarde.value.trim()
-  };
-  const allEmpty = Object.values(newEntry).every(v => !v);
-  const isoDate = new Date(modalDate).toISOString().slice(0, 10);
-  try {
-    if (allEmpty) {
-      const { error } = await supabaseClient.from("cardapio_cantina").delete().eq("data_iso", isoDate);
-      if (error) console.error("Erro delete:", error);
-      delete menuData[isoDate];
-    } else {
-      const { error } = await supabaseClient.from("cardapio_cantina").upsert({ data_iso: isoDate, ...newEntry }, { onConflict: "data_iso" });
-      if (error) console.error("Erro upsert:", error);
-      else menuData[isoDate] = newEntry;
-    }
-  } catch (err) {
-    console.error("Erro inesperado:", err);
-    alert("Erro ao salvar no banco");
-  }
-  closeModal();
-  renderCalendar();
-}
-
-// ====== NAVEGAÇÃO ======
 function changeMonth(delta) {
   viewDate = new Date(viewDate.getFullYear(), viewDate.getMonth() + delta, 1);
   renderCalendar();
@@ -214,31 +102,27 @@ function goToday() {
   renderCalendar();
 }
 
-// ====== EXPORTAÇÃO ======
+// ====== CORREÇÃO AQUI ======
 async function prepareExportWrapper() {
   const calendar = document.getElementById("calendar");
   const clone = calendar.cloneNode(true);
   clone.querySelectorAll("button").forEach(el => el.remove());
-  clone.querySelectorAll(".text-right").forEach(el => el.remove());
-  clone.querySelectorAll(".hover\\:shadow-lg").forEach(n => n.classList.remove("hover:shadow-lg"));
 
   const wrapper = document.createElement("div");
   wrapper.style.position = "absolute";
-  wrapper.style.left = "0";
+  wrapper.style.left = "-9999px"; // <-- fora da tela, mas renderiza
   wrapper.style.top = "0";
-  wrapper.style.zIndex = "9999";
-  wrapper.style.opacity = "0";
   wrapper.style.background = "white";
+  wrapper.style.padding = "40px";
   wrapper.style.border = "4px solid #16a34a";
   wrapper.style.borderRadius = "20px";
-  wrapper.style.padding = "40px";
   wrapper.style.fontFamily = "Arial, sans-serif";
 
   const header = document.createElement("div");
   header.style.display = "flex";
   header.style.alignItems = "center";
   header.style.gap = "20px";
-  header.style.marginBottom = "25px";
+  header.style.marginBottom = "20px";
 
   const logo = document.createElement("img");
   logo.src = "https://i.ibb.co/KxSrH0Nj/logo.png";
@@ -247,17 +131,15 @@ async function prepareExportWrapper() {
   await new Promise(r => { logo.onload = r; logo.onerror = r; });
 
   const titleBlock = document.createElement("div");
-  const title = document.createElement("h2");
   const monthName = viewDate.toLocaleString("pt-BR", { month: "long" });
   const year = viewDate.getFullYear();
+  const title = document.createElement("h2");
   title.textContent = `Cardápio da Cantina — ${monthName.charAt(0).toUpperCase() + monthName.slice(1)}/${year}`;
   title.style.color = "#16a34a";
-  title.style.fontSize = "24px";
+  title.style.fontSize = "22px";
   title.style.fontWeight = "700";
-  title.style.marginBottom = "6px";
   const icons = document.createElement("div");
   icons.innerHTML = "🍽️ 🥗 🍖 🍊 🍮";
-  icons.style.fontSize = "22px";
   titleBlock.appendChild(title);
   titleBlock.appendChild(icons);
 
@@ -267,13 +149,15 @@ async function prepareExportWrapper() {
   wrapper.appendChild(clone);
   document.body.appendChild(wrapper);
 
+  // 🔧 Delay necessário para o layout carregar completamente
+  await new Promise(r => setTimeout(r, 150));
+
   return { wrapper };
 }
 
 // ====== EXPORTAR PNG ======
 async function generateImage() {
   const btn = document.getElementById("exportBtn");
-  if (btn.disabled) return;
   btn.disabled = true;
   const originalText = btn.textContent;
   btn.textContent = "Gerando...";
@@ -288,8 +172,7 @@ async function generateImage() {
     a.click();
     wrapper.remove();
   } catch (err) {
-    console.error("Erro ao gerar imagem:", err);
-    alert("Erro ao gerar PNG");
+    console.error("Erro PNG:", err);
   } finally {
     btn.disabled = false;
     btn.textContent = originalText;
@@ -299,7 +182,6 @@ async function generateImage() {
 // ====== EXPORTAR PDF ======
 async function generatePDF() {
   const btn = document.getElementById("exportPdfBtn");
-  if (btn.disabled) return;
   btn.disabled = true;
   const originalText = btn.textContent;
   btn.textContent = "Gerando...";
@@ -310,31 +192,23 @@ async function generatePDF() {
     const pdf = new window.jspdf.jsPDF("landscape", "mm", "a4");
     const w = pdf.internal.pageSize.getWidth();
     const h = pdf.internal.pageSize.getHeight();
-    const margin = 8;
-    const ratio = Math.min(
-      (w - margin * 2) / canvas.width,
-      (h - margin * 2) / canvas.height
-    );
+    const ratio = Math.min(w / canvas.width, h / canvas.height);
     const imgW = canvas.width * ratio;
     const imgH = canvas.height * ratio;
     const x = (w - imgW) / 2;
     const y = (h - imgH) / 2;
     pdf.addImage(img, "PNG", x, y, imgW, imgH, undefined, "FAST");
-    const year = viewDate.getFullYear();
-    pdf.save(`cantina-${year}-${String(viewDate.getMonth() + 1).padStart(2, "0")}.pdf`);
+    pdf.save(`cantina-${viewDate.getFullYear()}-${String(viewDate.getMonth() + 1).padStart(2, "0")}.pdf`);
     wrapper.remove();
   } catch (err) {
-    console.error("Erro ao gerar PDF:", err);
-    alert("Erro ao gerar PDF");
+    console.error("Erro PDF:", err);
   } finally {
     btn.disabled = false;
     btn.textContent = originalText;
   }
 }
 
-// ====== INICIALIZA ======
 loadData();
 </script>
-
 </body>
 </html>
